--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
     <title>株式会社東京ダイナー</title>
+    <meta
+      name="description"
+      content="新定番を、東京から世界に発信しつづける。"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
